lesson23/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-set
  namespace: dev
spec:
  serviceName: "mysql-service" # имя сервиса, на который будут ссылаться поды
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql

        volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc # собсна здесь обращаемся через имя созданного pvc
