lesson23/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  namespace: dev
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest

        resources:          # нужно добавить ресурсы, которые может использовать наш контейнер (ну или наверно все-таки под) как одиночный экземпляр деплоя
          requests:         # минимальные ресурсы
            cpu: 200m
            memory: 256Mi
          limits:           # максимальные ресурсы
            cpu: 500m
            memory: 512Mi

        ports:
        - containerPort: 80

        volumeMounts:
          - name: wordpress-data
            mountPath: /var/www/html

      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
