lesson23/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-wp-to-db-policy
  namespace: dev

spec:
  podSelector:
    matchLabels:
      app: mysql

  policyTypes:
  - Ingress

  ingress:
  - from:

#        Это по задание не надо (просто переписывал из лекции), так как разрешит всем подам в dev обращаться к mysql, а надо выделить только wp-поды, что сделано ниже
#        - namespaceSelector:
#            matchLabels:
#              project: dev
    - podSelector:
        matchLabels:
          app: wordpress
